# an-overly-specific-pdf-parser

./: .gitignore  MULTI_CHAPTER_GUIDE.md  PIPELINE_COMPARISON.md  README.md  README_MULTI_CHAPTER.md  README_MinerU_Pipeline.md  cache_helpers.py  convert_item_test.py  dump_schema.py  example_usage.py  extract_structured_pdf.py  fixme.py  generate_tiptap_node_schema.py  index_chapter.py  llama_extract.py  mineru_pipeline.py  multi_chapter_pipeline.py  parse_with_llama_parse.py  pipeline.py  pipeline_state_helpers.py  propose_new_rule.py  pyproject.toml  reorder_blocks.py  requirements_mineru.txt  rule_registry.py  run_all.py  save_latest.py  tiptap_live_editor_helper.py  tiptap_models.py  typography.json  update_actions.py  zip_llama_pymupdf.py
doc_server/: helpers.py  main.py
etl/: chapter_detection.py  llama_parse.py  pdf_chapter_extractor.py  pymupdf_parse.py  zip_llama_pymupdf.py
etl/wip_playground/: chapter_spliter.py  layoutpdf.py  llama_extract.py  llama_extract_pydantic.py  parse_goals_with_llama_parse.py
export/: models.py
post_processing/: custom_extraction.py  extract_strategies.py  insert_images.py  llama_extract.py  typography_check.py  williston_extraction_schema.py
rule_registry/: __init__.py  heading.py  llamaparse_text_to_paragraph.py
rule_registry/conversion_rules/: __init__.py  heading.py  llamaparse_table_to_tiptap_table.py  llamaparse_text_to_paragraph.py
rule_registry/propose/: new_rule_graph.py  propose_new_rule.py  tiptap_node_summary.py
schema/: block.py  portable_schema.py  tiptap_models.py
tiptap/: README  editor_schema.json  generate_prose_mirror_classes.py  index.html  package.json  pnpm-lock.yaml  tiptap_models.py
tiptap/live_viewer/: index.html  package.json  pnpm-lock.yaml  vite.config.js
tiptap/live_viewer/scripts/: dump-schema.js
tiptap/live_viewer/src/: extensions.js  main.jsx
tiptap/live_viewer/src/custom_extensions/: image_header.js
tiptap/live_viewer/src/custom_extensions/actionItem/: extension.js  view.jsx
tiptap/live_viewer/src/custom_extensions/strategyItem/: extension.js  view.jsx
tiptap/schema_extractor/: editor_schema.json  generate_prose_mirror_classes.py
tiptap/schema_extractor/js/: index.js  package.json
tiptap/src/: main.jsx
tiptap_schema_extractor/: README.md  editor_schema.json  generate_prose_mirror_classes.py
tiptap_schema_extractor/js/: index.js  package-lock.json  package.json
