[project]
name = "pdf-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.26",
    "langgraph>=0.4.8",
    "llama-parse>=0.6.35",
    "pymupdf>=1.26.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "I", "F"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Use spaces around operators
line-ending = "auto"
indent-style = "space"