[project]
name = "pdf-to-prosemirror"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.13",
    "langchain>=0.3.26",
    "langchain-openai>=0.3.25",
    "langgraph>=0.4.8",
    "llama-parse>=0.6.35",
    "llmsherpa>=0.1.4",
    "peewee>=3.18.1",
    "pillow>=11.2.1",
    "playhouse>=0.1.0",
    "psycopg2-binary>=2.9.10",
    "pymupdf>=1.26.1",
    "supabase>=2.16.0",
    "uvicorn>=0.34.3",
]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "I", "F"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Use spaces around operators
line-ending = "auto"
indent-style = "space"
